Fix slide caption spacing

--- a/src/assets/styles/components/_slide.css
+++ b/src/assets/styles/components/_slide.css
@@ -12,5 +12,6 @@
 
   .slide__caption {
     border-block-start: var(--border-width-thick) solid var(--color-rule);
+    margin-block-start: 0;
   }
 }
